unpackaged/main/default/objects/simplesms__Conversation__c/simplesms__Conversation__c.object-meta.xml
<CustomObject>
    <label>Conversation</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Conversation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>