unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Account__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>