unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Campaign__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>