unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Case__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>