unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Channel__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>