unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Closed__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Closed__c</fullName>
    <formula>ISPICKVAL(simplesms__Status__c, &quot;Closed&quot;)</formula>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>