unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Closed_By__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>