unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Closed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Closed_Date_Time__c</fullName>
    <label>Conversation End</label>
    <type>DateTime</type>
</CustomField>