unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Conversation_Age_Hours__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Conversation_Age_Hours__c</fullName>
    <description>The age of this Conversation in hours.  The age is the difference between the Start Time and End Time, or if it&#39;s still Open then it&#39;s the difference between the Start Time and Current Time.</description>
    <formula>IF(
    NOT(ISBLANK(simplesms__Conversation_Age_Minutes__c)),
    simplesms__Conversation_Age_Minutes__c/60,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The age of this Conversation in hours.</inlineHelpText>
    <label>Conversation Age (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>