unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Conversation_Age_Minutes__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Conversation_Age_Minutes__c</fullName>
    <description>The age of this Conversation in hours.</description>
    <formula>IF(
    AND(
        ISPICKVAL(simplesms__Status__c, &quot;Closed&quot;),
        NOT(ISBLANK(simplesms__Closed_Date_Time__c))
    ),
    (simplesms__Closed_Date_Time__c - simplesms__Conversation_Start__c)*24*60,
    (NOW() - simplesms__Conversation_Start__c)*24*60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The age of this Conversation in hours.</inlineHelpText>
    <label>Conversation Age (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>