unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Conversation_Start__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Conversation_Start__c</fullName>
    <label>Conversation Start</label>
    <type>DateTime</type>
</CustomField>