unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Internal_Phone__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Internal_Phone__c</fullName>
    <label>Internal Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>