unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Last_Message__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Last_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Message</label>
    <referenceTo>simplesms__SMS_Message__c</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>