unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Last_Message_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Last_Message_Date_Time__c</fullName>
    <formula>simplesms__Last_Message__r.simplesms__Message_Date__c</formula>
    <label>Last Message Date/Time</label>
    <type>DateTime</type>
</CustomField>