unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Last_Message_Direction__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Last_Message_Direction__c</fullName>
    <formula>TEXT( simplesms__Last_Message__r.simplesms__Type__c)</formula>
    <label>Last Message Direction</label>
    <type>Text</type>
</CustomField>