unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Last_Message_Status__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Last_Message_Status__c</fullName>
    <formula>TEXT(simplesms__Last_Message__r.simplesms__Status__c)</formula>
    <label>Last Message Status</label>
    <type>Text</type>
</CustomField>