unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Lead__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>