unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>