unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Recipient_Phone__c</fullName>
    <label>Recipient Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>