unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Status__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>