unpackaged/main/default/objects/simplesms__Conversation__c/fields/simplesms__Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Sub_Status__c</fullName>
    <formula>IF( 
ISPICKVAL(simplesms__Status__c, &quot;Closed&quot;), 
&quot;Closed&quot;, 
IF( 
ISPICKVAL(simplesms__Status__c, &quot;Open&quot;), 
CASE(simplesms__Last_Message_Direction__c,&quot;Incoming&quot;, &quot;Needs Response&quot;, &quot;Outgoing&quot;, &quot;Responded&quot;,&quot;&quot;), 
&quot;&quot; 
) 
)</formula>
    <label>Sub-Status</label>
    <type>Text</type>
</CustomField>