unpackaged/main/default/objects/simplesms__Conversation__c/listViews/Hialeah_Events_Conversation.listView-meta.xml
<ListView>
    <fullName>Hialeah_Events_Conversation</fullName>
    <filterScope>Queue</filterScope>
    <label>Hialeah SMS</label>
    <queue>Hialeah_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>