unpackaged/main/default/objects/simplesms__Conversation__c/listViews/Homestead_Events_Conversation.listView-meta.xml
<ListView>
    <fullName>Homestead_Events_Conversation</fullName>
    <filterScope>Queue</filterScope>
    <label>Homestead SMS</label>
    <queue>Homestead_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>