unpackaged/main/default/objects/simplesms__Conversation__c/listViews/Info_Center_Conversation.listView-meta.xml
<ListView>
    <fullName>Info_Center_Conversation</fullName>
    <filterScope>Queue</filterScope>
    <label>Info Center</label>
    <queue>Info_Center</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>