unpackaged/main/default/objects/simplesms__Conversation__c/listViews/Kendall_Events_Conversation.listView-meta.xml
<ListView>
    <fullName>Kendall_Events_Conversation</fullName>
    <filterScope>Queue</filterScope>
    <label>Kendall SMS</label>
    <queue>Kendall_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>