unpackaged/main/default/objects/simplesms__Conversation__c/listViews/Medical_Events_Conversation.listView-meta.xml
<ListView>
    <fullName>Medical_Events_Conversation</fullName>
    <filterScope>Queue</filterScope>
    <label>Medical SMS</label>
    <queue>Medical_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>