unpackaged/main/default/objects/simplesms__Conversation__c/listViews/Meek_Events_Conversation.listView-meta.xml
<ListView>
    <fullName>Meek_Events_Conversation</fullName>
    <filterScope>Queue</filterScope>
    <label>Meek SMS</label>
    <queue>Meek_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>