unpackaged/main/default/objects/simplesms__Conversation__c/listViews/North_Events_Conversation.listView-meta.xml
<ListView>
    <fullName>North_Events_Conversation</fullName>
    <filterScope>Queue</filterScope>
    <label>North SMS</label>
    <queue>North_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>