unpackaged/main/default/objects/simplesms__Conversation__c/listViews/Padron_Events_Conversation.listView-meta.xml
<ListView>
    <fullName>Padron_Events_Conversation</fullName>
    <filterScope>Queue</filterScope>
    <label>Padron SMS</label>
    <queue>Padron_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>