unpackaged/main/default/objects/simplesms__Conversation__c/listViews/West_Events_Conversation.listView-meta.xml
<ListView>
    <fullName>West_Events_Conversation</fullName>
    <filterScope>Queue</filterScope>
    <label>West SMS</label>
    <queue>West_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>