unpackaged/main/default/objects/simplesms__Conversation__c/listViews/Wolfson_Events_Conversation.listView-meta.xml
<ListView>
    <fullName>Wolfson_Events_Conversation</fullName>
    <filterScope>Queue</filterScope>
    <label>Wolfson SMS</label>
    <queue>Wolfson_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>